# exercism-exercises

rust/: Cargo.toml
rust/allergies/.exercism/: metadata.json
rust/allergies/src/: lib.rs
rust/anagram/.exercism/: metadata.json
rust/anagram/src/: lib.rs
rust/assembly-line/.exercism/: metadata.json
rust/assembly-line/src/: lib.rs
rust/clock/.exercism/: metadata.json
rust/clock/src/: lib.rs
rust/clock/tests/: clock.rs
rust/health-statistics/.exercism/: metadata.json
rust/low-power-embedded-game/.exercism/: metadata.json
rust/low-power-embedded-game/src/: lib.rs
rust/lucians-luscious-lasagna/.exercism/: metadata.json
rust/magazine-cutout/.exercism/: metadata.json
rust/magazine-cutout/src/: lib.rs
rust/parallel-letter-frequency/.exercism/: metadata.json
rust/parallel-letter-frequency/src/: lib.rs
rust/poker/.exercism/: metadata.json
rust/poker/src/: lib.rs
rust/resistor-color/.exercism/: metadata.json
rust/resistor-color/src/: lib.rs
rust/reverse-string/.exercism/: metadata.json
rust/reverse-string/src/: lib.rs
rust/role-playing-game/.exercism/: metadata.json
rust/role-playing-game/src/: lib.rs
rust/rpn-calculator/.exercism/: metadata.json
rust/rpn-calculator/src/: lib.rs
rust/semi-structured-logs/.exercism/: metadata.json
rust/semi-structured-logs/src/: lib.rs
rust/semi-structured-logs/tests/: semi-structured-logs.rs
rust/short-fibonacci/.exercism/: metadata.json
rust/short-fibonacci/src/: lib.rs
rust/space-age/.exercism/: metadata.json
rust/space-age/src/: lib.rs
rust/sublist/.exercism/: metadata.json
(+15 files in other folders)
