[workspace]

members = [
  "assembly-line",
  "lucians-luscious-lasagna",
  "semi-structured-logs",
  "sublist",
  "poker",
  "allergies",
  "resistor-color",
  "health-statistics",
  "low-power-embedded-game",
  "role-playing-game",
  "magazine-cutout",
  "short-fibonacci",
  "rpn-calculator",
  "reverse-string",
  "clock",
  "anagram",
  "space-age",
  "parallel-letter-frequency"
]
